--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,12 @@ body{
 
 .row1{
   overflow-x: auto;
-  display: flex;
+  /* display: flex; */
   flex-wrap: nowrap;
   /* gap: 16px; */
+  display: grid;
+  /* grid-template-columns: 1fr 1fr 1fr; */
+  grid-template-columns : repeat( 5, 1fr);
+  grid-auto-rows: 1fr;
+  /* gap: 1rem; */
 }
